<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/RealAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/animal_age_calculator"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#E1B32B"
        android:textColorHint="#C67702"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="280dp"
        android:layout_height="162dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RealAge"
        app:srcCompat="@drawable/download"
        android:contentDescription="@string/image_of_house_pets_app_can_determine_the_age_of" />

    <Spinner
        android:id="@+id/spinner"
        android:entries="@array/animalTypes"
        android:layout_width="374dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstPrompt" />

    <TextView
        android:id="@+id/FirstPrompt"
        android:layout_width="318dp"
        android:layout_height="25dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="24dp"
        android:text="@string/choose_your_pet"
        android:textColor="#E1B32B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/PromptTwo"
        android:layout_width="218dp"
        android:layout_height="21dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="18dp"
        android:text="@string/human_age_of_pet"
        android:textColor="#E1B32B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/NumScroller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <SeekBar
        android:id="@+id/NumScroller"
        android:layout_width="310dp"
        android:layout_height="27dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PromptTwo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="25dp"
        android:text="@string/your_pet_s_real_age"
        android:textColor="#E1B32B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/LifeExpectancy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumScroller" />

    <TextView
        android:id="@+id/LifeExpectancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="42dp"
        android:textColor="#E1B32B"
        android:textStyle="bold"
        android:text="@string/your_pet_s_life_expectancy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/seekBarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="155dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/NumScroller"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="22dp"
        android:text="0"
        app:layout_constraintBottom_toTopOf="@+id/LifeExpectancy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/NumScroller" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="47dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LifeExpectancy"
        app:layout_constraintTop_toBottomOf="@+id/NumScroller" />

    <Button
        android:id="@+id/GoButton"
        android:layout_width="91dp"
        android:layout_height="52dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="52dp"
        android:textColor="#DDA90A"
        android:backgroundTint="#131313"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/NumScroller"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>